--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -6,29 +6,35 @@ body {
 }
 #container {
 
-    width: 100%;
+    width: 1400px;
     height: 1000px;
+    margin: auto;
+    margin-top: 100px;
 
 }
-#opaque {
-    width: 100%;
-    height: 1000px;
-    padding-top: 8%;
-    background: rgba(500, 500, 500, .5);
 
-
-}
 
 #container-inner {
-    height: 600px;
-    width: 85%;
-    background: rgba(0, 0, 0, .4);
+    height: 700px;
+    width: 1300px;
+    background: rgba(500, 500, 500, .9);
     margin: auto;
     box-sizing: border-box;
     border-radius: 30px;
 
 }
 
-div {
-    overflow: hidden;
+
+#courseSelect {
+    margin: auto;
+    padding-top: 200px;
+    width: 50%;
+    height: 100px;
+
+
 }
+#courseSelect p {
+    display: inline;
+    margin-left: 30%;
+}
+
